// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WrapperComponent allows custom layouts 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <div
      class="input-wrapper"
    >
      <input
        aria-autocomplete="none"
        aria-controls="id_listbox"
        aria-describedby="id_found_description"
        aria-expanded="false"
        autocomplete="off"
        class="react-combo-boxes-combobox__input"
        id="id"
        role="combobox"
        type="text"
        value=""
      />
    </div>
    <div
      class="before-input"
    />
    <div
      class="open-button-wrapper"
    >
      <span
        aria-hidden="true"
        class="react-combo-boxes-combobox__open-button"
        id="id_open_button"
      />
    </div>
    <div
      class="clear-button-wrapper"
    >
      <span
        aria-hidden="true"
        class="react-combo-boxes-combobox__clear-button"
        hidden=""
        id="id_clear_button"
      />
    </div>
    <div
      class="listbox-wrapper"
    >
      <ul
        class="react-combo-boxes-listbox"
        hidden=""
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <li
          class="react-combo-boxes-listbox__option"
          id="id_option_foo"
          role="option"
          tabindex="-1"
        >
          foo
        </li>
      </ul>
    </div>
    <div
      class="listbox-hint"
    >
      <div
        class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        id="id_found_description"
      />
    </div>
    <div
      class="not-found-wrapper"
    >
      <div
        class="react-combo-boxes-combobox__not-found"
        hidden=""
        id="id_not_found"
      />
    </div>
  </div>
</div>
`;

exports[`onSearch updating options updates the displayed options 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_found_description"
      aria-expanded="true"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__open-button"
      id="id_open_button"
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
    />
    <ul
      class="react-combo-boxes-listbox"
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_strawberry"
        role="option"
        tabindex="-1"
      >
        Strawberry
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_raspberry"
        role="option"
        tabindex="-1"
      >
        Raspberry
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
    </ul>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_found_description"
    >
      3 options found
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
  </div>
</div>
`;

exports[`options as array of objects disabled sets the aria-disabled attribute 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_found_description"
      aria-expanded="true"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__open-button"
      id="id_open_button"
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
    />
    <ul
      class="react-combo-boxes-listbox"
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        aria-disabled="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
    </ul>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_found_description"
    >
      2 options found
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
  </div>
</div>
`;

exports[`options as array of objects group renders grouped options 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_found_description"
      aria-expanded="false"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__open-button"
      id="id_open_button"
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
    />
    <ul
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        aria-hidden="true"
        class="react-combo-boxes-listbox__group-label"
      >
        Citrus
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        <div
          class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        >
          Citrus
        </div>
        Orange
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_lemon"
        role="option"
        tabindex="-1"
      >
        <div
          class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        >
          Citrus
        </div>
        Lemon
      </li>
      <li
        aria-hidden="true"
        class="react-combo-boxes-listbox__group-label"
      >
        Berry
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_raspberry"
        role="option"
        tabindex="-1"
      >
        <div
          class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        >
          Berry
        </div>
        Raspberry
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_strawberry"
        role="option"
        tabindex="-1"
      >
        <div
          class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        >
          Berry
        </div>
        Strawberry
      </li>
    </ul>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_found_description"
    />
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
  </div>
</div>
`;

exports[`options as array of objects label renders a closed combo box 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_found_description"
      aria-expanded="false"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__open-button"
      id="id_open_button"
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
    />
    <ul
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        Orange
      </li>
    </ul>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_found_description"
    />
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
  </div>
</div>
`;

exports[`options as array of objects missing label treats as a blank string 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_found_description"
      aria-expanded="false"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__open-button"
      id="id_open_button"
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
    />
    <ul
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_undefined"
        role="option"
        tabindex="-1"
      />
    </ul>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_found_description"
    />
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
  </div>
</div>
`;

exports[`options options as array of numbers renders a closed combo box 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_found_description"
      aria-expanded="false"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__open-button"
      id="id_open_button"
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
    />
    <ul
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_1"
        role="option"
        tabindex="-1"
      >
        1
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_2"
        role="option"
        tabindex="-1"
      >
        2
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_3"
        role="option"
        tabindex="-1"
      >
        3
      </li>
    </ul>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_found_description"
    />
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
  </div>
</div>
`;

exports[`options options as array of strings renders a closed combo box 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_found_description"
      aria-expanded="false"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__open-button"
      id="id_open_button"
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
    />
    <ul
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        Orange
      </li>
    </ul>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_found_description"
    />
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
  </div>
</div>
`;

exports[`options options as null renders an option with an empty string 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_found_description"
      aria-expanded="false"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__open-button"
      id="id_open_button"
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
    />
    <ul
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_"
        role="option"
        tabindex="-1"
      >
        
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_foo"
        role="option"
        tabindex="-1"
      >
        foo
      </li>
    </ul>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_found_description"
    />
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
  </div>
</div>
`;

exports[`options options as undefined renders an option with an empty string 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_found_description"
      aria-expanded="false"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__open-button"
      id="id_open_button"
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
    />
    <ul
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_"
        role="option"
        tabindex="-1"
      >
        
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_foo"
        role="option"
        tabindex="-1"
      >
        foo
      </li>
    </ul>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_found_description"
    />
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
  </div>
</div>
`;
